# AnalyticsTracker2025

./: README.md
analytics-tracker/: DESIGN.md  README.md  pom.xml
analytics-tracker/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
analytics-tracker/src/main/java/org/smat/: GreetingResource.java  MyEntity.java
analytics-tracker/src/main/resources/: application.properties
analytics-tracker/src/test/java/org/smat/: GreetingResourceIT.java  GreetingResourceTest.java
backend/web/: Cargo.toml
backend/web/src/: lib.rs  main.rs
backend/web/tests/: health_check.rs
