[package]
name = "web"
version = "0.1.0"
edition = "2021"
authors = ["Oussama Saoudi <oussama.sa216@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "web"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.12.12"
